# clex

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: lexer.rs  main.rs  source.rs  stats.rs  test_utils.rs  token.rs
test/: error.c  fail.c  hello.c  number.txt  str.txt  test.c
